--- a/package.json
+++ b/package.json
@@ -20,9 +20,14 @@
     "@angular/platform-browser": "^6.1.0",
     "@angular/platform-browser-dynamic": "^6.1.0",
     "@angular/router": "^6.1.0",
+    "@fortawesome/angular-fontawesome": "^0.2.0",
+    "@fortawesome/fontawesome-svg-core": "^1.2.4",
+    "@fortawesome/free-solid-svg-icons": "^5.3.1",
     "@ng-bootstrap/ng-bootstrap": "^3.0.0",
+    "boostrap": "^2.0.0",
     "bootstrap": "^4.1.3",
     "core-js": "^2.5.4",
+    "font-awesome": "^4.7.0",
     "html2canvas": "^1.0.0-alpha.12",
     "jspdf": "^1.4.1",
     "rxjs": "^6.0.0",
