--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@ng-bootstrap/ng-bootstrap": "^3.0.0",
     "boostrap": "^2.0.0",
     "bootstrap": "^4.1.3",
+    "chart.js": "^2.7.3",
     "core-js": "^2.5.4",
     "cors": "^2.8.4",
     "express": "^4.16.4",
