--- a/package.json
+++ b/package.json
@@ -30,10 +30,12 @@
     "boostrap": "^2.0.0",
     "bootstrap": "^4.1.3",
     "chart.js": "^2.7.3",
+    "compression": "^1.7.3",
     "core-js": "^2.5.4",
     "cors": "^2.8.4",
     "express": "^4.16.4",
     "font-awesome": "^4.7.0",
+    "helmet": "^3.14.0",
     "html2canvas": "^1.0.0-alpha.12",
     "jspdf": "^1.4.1",
     "rxjs": "^6.0.0",
