--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.4",
     "@fortawesome/free-solid-svg-icons": "^5.3.1",
     "@ng-bootstrap/ng-bootstrap": "^3.0.0",
+    "@ngx-translate/core": "^11.0.0",
+    "@ngx-translate/http-loader": "^4.0.0",
     "boostrap": "^2.0.0",
     "bootstrap": "^4.1.3",
     "chart.js": "^2.7.3",
@@ -38,7 +40,9 @@
     "helmet": "^3.14.0",
     "html2canvas": "^1.0.0-alpha.12",
     "jspdf": "^1.4.1",
-    "rxjs": "^6.0.0",
+    "ngx-bootstrap": "^3.1.1",
+    "rxjs": "^6.3.3",
+    "rxjs-compat": "^6.3.3",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
