--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@ng-bootstrap/ng-bootstrap": "^3.0.0",
     "@ngx-translate/core": "^11.0.0",
     "@ngx-translate/http-loader": "^4.0.0",
+    "@w11k/ngx-componentdestroyed": "^4.0.1",
     "boostrap": "^2.0.0",
     "bootstrap": "^4.1.3",
     "chart.js": "^2.7.3",
