--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "core-js": "^2.5.4",
     "cors": "^2.8.4",
     "express": "^4.16.4",
+    "flag-icon-css": "^3.2.1",
     "font-awesome": "^4.7.0",
     "helmet": "^3.14.0",
     "html2canvas": "^1.0.0-alpha.12",
