--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "invoicecfront",
-  "version": "0.0.3-RELEASE",
+  "version": "0.0.4",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
